src/main/resources/scss/common/components/_forms.scss
input[type="text"],
input[type="password"],
input[type="date"],
input[type="datetime"],
input[type="datetime-local"],
input[type="month"],
input[type="week"],
input[type="email"],
input[type="number"],
input[type="search"],
input[type="tel"],
input[type="time"],
input[type="url"],
input[type="color"],
select,
textarea {
	border-color: $border-grey;
	box-shadow: inset 0 0 0 0 $border-grey;

	&.required {
		box-shadow: inset 4px 0 0 0 $border-grey;
		&:focus {
			box-shadow: inset 4px 0 0 0 $border-blue !important;
		}
	}

	&.error {
		border-color: $border-red;
		box-shadow: inset 4px 0 0 0 $primary-red !important;
	}

	&:focus {
		border-color: $border-blue !important;
	}
}


input.error,
textarea.error,
select.error {
	margin-bottom: 1rem;
}

.errors {
	small.error {
		border-radius: 2px;
	}
}

.helptext {
	font-size: .6875rem;
	color: $secondary-grey;
}

.radiogroup {
	label {
		input {
			margin-right: .5rem;
		}
	}
}

// css3unsupported is not a class we use, but the :not() isn't supported in IE8 ..we're using it as a feature test.
// so this block of style will not apply at all in IE8. (or android 2.x)
// so the system default checkbox will be left as is.
label:not(.css3unsupported) {
	$checkbox: 'input[type="checkbox"]';
	$radiobox: 'input[type="radio"]';

	span {
		position: relative;
		z-index: -1; // fixes an issue on iOS where you can't click the label to toggle the input.
		backface-visibility: hidden; // fixes a weird paint issue in chrome (44.0.2383.0 dev) with the dev tools open in which the labels would appear incorrectly positioned.
	}

	& > #{$checkbox} {
		position: absolute !important;
		opacity: 0 !important;//Cannot "display:none" nor "visibilitiy:hidden" or you cannot access it with tab/keyboard.

		& + span {
			line-height: 3;
			padding-left: 1.5rem;
			position: relative;
			z-index: -1; // fixes an issue on iOS where you can't click the label to toggle the input.

			&::before {
				content: '';
				background-repeat: no-repeat;
				background-position: center;
				position: absolute;
				top: 0.1rem;
				left: 0;
				width: 18px;
				height: 18px;
			}

			&.htmlLabel { // the signature in the five-minute enrollment form wraps and we want consistent leading.
				line-height: inherit;
			}
		}


		& + span::before { @extend %checkbox-image; }
		&:checked + span::before { @extend %checkbox-image-active; }
	}

	//&:hover > #{$checkbox},
	& > #{$checkbox}:focus,
	& > #{$checkbox}:active {
		&:not(:checked):not(.disabled) + span::before { @extend %checkbox-image-hover; }
	}
}

.form-render {
	clear: both;
}

